
USER VISIBLE CHANGES
     o The use of ROAuth and RCurl has been removed in favor of the httr
     package. This changes how OAuth authentication is handled, with the
     new system going through setup_twitter_oauth() and load_twitter_oauth().

     o Changed from using int64 to bit64 for large integer support
 
     o setup_twitter_oauth() will report if an authentication attempt fails

NEW FEATURES
    o Added a function strip_retweets which will attempt to remove retweets
    from a list of Status objects.

    o Added a function 'retweeters' and a convenience method 'getRetweeters'
    to the Status class. This function takes an ID of a tweet and a count
    (default is 20) and will return the IDs of users who have retweeted this
    tweet. The getRetweeters convenience method only takes the count.

    o Added argument forceUtf8Conversion (accessible via ... in all exposed
    functionality) which if set to FALSE (default is TRUE) will disable the
    forced conversion to UTF-8. Note that doing this can cause bad behavior
    if responses pass on characters outside of UTF-8.

CHANGES IN VERSION 1.1.7 (2013-7-8)
-----------------------

NEW FEATURES
    o Added a 'urls' slot to the Status class. This is a data.frame containing
    information about any t.co shortened URLs, providing the expanded URL,
    a display string and the character positions the URL was extracted from.
    This only applies to t.co shortened URLs.

    o Added a function decode_short_urls as a utility to help users process
    shortened URLs which were not t.co shortened.

    o Included patch to force all characters to UTF-8 before passing along
    to rjson

    o Added function "favorites" which takes a user and returns a list of
    their n most recent favorited tweets. Also added convenience method
    to the user class getFavorites()    

    o Added favoriteCount field to the status class, i.e. x$getFavoriteCount()
